--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -1070,11 +1070,27 @@ table tr:hover .table-links {
         background-color: #f6f7fe;
     }
 
-  .nav-pills .nav-item .nav-link.active {
+    .nav-pills .nav-link.valid.active {
+    background-color: #28a745;
+    box-shadow: 0 2px 6px #28a745;
+}
+
+.nav-pills .nav-link.invalid.active {
+    background-color: #dc3545;
+    box-shadow: 0 2px 6px #dc3545;
+}
+
+.nav-pills .nav-link.in-progress.active {
+    background-color: #fd7e14;
+    box-shadow: 0 2px 6px #fd7e14;
+}
+
+ .nav-pills .nav-link.active:not(.valid):not(.invalid):not(.in-progress) {
+    background-color: #3abaf4;
     box-shadow: 0 2px 6px #3abaf4;
     color: #fff;
-    background-color: #3abaf4
-; }
+}
+
   .nav-pills .nav-item .nav-link .badge {
     padding: 5px 8px;
     margin-left: 5px; }
